--- a/src/main/resources/templates/admin/page_list.html
+++ b/src/main/resources/templates/admin/page_list.html
@@ -4,8 +4,8 @@
 <body class="fixed-left">
 <div id="wrapper">
     <div th:replace="admin/header::header-body"></div>
-    <div class="content-page">
-        <div class="content">
+    <div class="article-page">
+        <div class="article">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
@@ -51,7 +51,7 @@
                         </table>
                     </div>
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <div th:replace="admin/footer :: footer-article"></div>
             </div>
         </div>
     </div>
