--- a/src/main/resources/templates/themes/default/links.html
+++ b/src/main/resources/templates/themes/default/links.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="themes/default/header::header(title='友情链接',keywords=null)"></div>
 <body>
-<article class="main-content post-page">
-    <div id="post-content" class="post-content">
+<article class="main-article post-page">
+    <div id="post-article" class="post-article">
         <h3>友情链接</h3>
         <ul class="flinks">
             <th:block th:each="link : ${links}">
