--- a/src/main/resources/templates/themes/default/old_comments.html
+++ b/src/main/resources/templates/themes/default/old_comments.html
@@ -36,9 +36,9 @@
                                 <a href="${comment.url}" target="_blank" rel="external nofollow">${comment.author}</a>
                             </span>
                         </div>
-                        <div class="comment-content">
+                        <div class="comment-article">
                             <span class="comment-author-at"></span>
-                            <p>${comment.content}</p>
+                            <p>${comment.article}</p>
                         </div>
                         <div class="comment-meta">
                             <time class="comment-time">${fmtdate(comment.created)}</time>
@@ -62,11 +62,11 @@
                                             <a href="${child.url}" target="_blank" rel="external nofollow">${child.author}</a>
                                         </span>
                                     </div>
-                                    <div class="comment-content">
+                                    <div class="comment-article">
                                         <span class="comment-author-at">
                                             ${comment_at(child.parent)}
                                         </span>
-                                        <p>${child.content}</p>
+                                        <p>${child.article}</p>
                                     </div>
                                     <div class="comment-meta">
                                         <time class="comment-time">${fmtdate(child.created)}</time>
