--- a/src/main/resources/templates/admin/article_edit.html
+++ b/src/main/resources/templates/admin/article_edit.html
@@ -25,16 +25,16 @@
 <body class="fixed-left">
 <div id="wrapper">
     <div th:replace="admin/header::header-body"></div>
-    <div class="content-page">
-        <div class="content">
+    <div class="article-page">
+        <div class="article">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
                         <h4 class="page-title">
-                            <th:block th:if="${null != contents}">
+                            <th:block th:if="${null != articles}">
                                 编辑文章
                             </th:block>
-                            <th:block th:unless="${null != contents}">
+                            <th:block th:unless="${null != articles}">
                                 发布文章
                             </th:block>
                         </h4>
@@ -43,37 +43,37 @@
                         <form id="articleForm" role="form" novalidate="novalidate">
                             <input type="hidden" name="categories" id="categories"/>
                             <input type="hidden" name="cid"
-                                   th:value="${contents!=null and contents.cid!=null}?${contents.cid}: ''" id="cid"/>
+                                   th:value="${articles!=null and articles.cid!=null}?${articles.cid}: ''" id="cid"/>
                             <input type="hidden" name="status"
-                                   th:value="${contents!=null and contents.status !=null}?${contents.status}: 'publish'"
+                                   th:value="${articles!=null and articles.status !=null}?${articles.status}: 'publish'"
                                    id="status"/>
                             <input type="hidden" name="allowComment"
-                                   th:value="${contents!=null and contents.allowComment !=null}?${contents.allowComment}: true"
+                                   th:value="${articles!=null and articles.allowComment !=null}?${articles.allowComment}: true"
                                    id="allow_comment"/>
                             <input type="hidden" name="allowPing"
-                                   th:value="${contents!=null and contents.allowPing !=null}?${contents.allowPing}: true"
+                                   th:value="${articles!=null and articles.allowPing !=null}?${articles.allowPing}: true"
                                    id="allow_ping"/>
                             <input type="hidden" name="allowFeed"
-                                   th:value="${contents!=null and contents.allowFeed !=null}?${contents.allowFeed}: true"
+                                   th:value="${articles!=null and articles.allowFeed !=null}?${articles.allowFeed}: true"
                                    id="allow_feed"/>
-                            <input type="hidden" name="content" id="content-editor"/>
+                            <input type="hidden" name="article" id="article-editor"/>
 
                             <div class="form-group col-md-6" style="padding: 0 10px 0 0;">
                                 <input type="text" class="form-control" placeholder="请输入文章标题（必须）" name="title"
                                        required="required"
                                        aria-required="true"
-                                       th:value="${contents!=null and contents.title!=null }?${contents.title}: ''"/>
+                                       th:value="${articles!=null and articles.title!=null }?${articles.title}: ''"/>
                             </div>
 
                             <div class="form-group col-md-6" style="padding: 0 0 0 10px;">
                                 <input type="text" class="form-control"
                                        placeholder="自定义访问路径，如：my-first-article  默认为文章id" name="slug"
-                                       th:value="${contents!=null and contents.slug !=null}?${contents.slug}: ''"/>
+                                       th:value="${articles!=null and articles.slug !=null}?${articles.slug}: ''"/>
                             </div>
 
                             <div class="form-group col-md-6" style="padding: 0 10px 0 0;">
                                 <input name="tags" id="tags" type="text" class="form-control" placeholder="请填写文章标签"
-                                       th:value="${contents!=null and contents.tags !=null}?${contents.tags}: ''"/>
+                                       th:value="${articles!=null and articles.tags !=null}?${articles.tags}: ''"/>
                             </div>
 
                             <div class="form-group col-md-6">
@@ -85,7 +85,7 @@
                                     <th:block th:unless="${null == categories}">
                                         <th:block th:each="c : ${categories}">
                                             <option th:value="${c.name}" th:text="${c.name}"
-                                                    th:selected="${null !=contents and adminCommons.exist_cat(c, contents.categories)}?true:false"></option>
+                                                    th:selected="${null !=articles and adminCommons.exist_cat(c, articles.categories)}?true:false"></option>
                                         </th:block>
                                     </th:block>
                                 </select>
@@ -94,13 +94,13 @@
                             <div class="form-group">
                                 <textarea style="height: 450px" autocomplete="off" id="text" name="text"
                                           class="markdown-textarea"
-                                          th:utext="${contents!=null and contents.content !=null}?${contents.content}: ''"></textarea>
+                                          th:utext="${articles!=null and articles.article !=null}?${articles.article}: ''"></textarea>
                             </div>
 
                             <div class="form-group col-md-3 col-sm-4">
                                 <label class="col-sm-4">开启评论</label>
                                 <div class="col-sm-8">
-                                    <div th:class="${contents!=null and contents.allowComment!=null }?'toggle toggle-success allow-'+${contents.allowComment}:'toggle toggle-success allow-true'"
+                                    <div th:class="${articles!=null and articles.allowComment!=null }?'toggle toggle-success allow-'+${articles.allowComment}:'toggle toggle-success allow-true'"
                                          onclick="allow_comment(this);"></div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
                             <div class="form-group col-md-3 col-sm-4">
                                 <label class="col-sm-4">允许Ping</label>
                                 <div class="col-sm-8">
-                                    <div th:class="${contents!=null and contents.allowPing !=null}?'toggle toggle-success allow-'+${contents.allowPing}:'toggle toggle-success allow-true'"
+                                    <div th:class="${articles!=null and articles.allowPing !=null}?'toggle toggle-success allow-'+${articles.allowPing}:'toggle toggle-success allow-true'"
                                          onclick="allow_ping(this);"></div>
                                 </div>
                             </div>
@@ -116,7 +116,7 @@
                             <div class="form-group col-md-3 col-sm-4">
                                 <label class="col-sm-4">允许订阅</label>
                                 <div class="col-sm-8">
-                                    <div th:class="${contents!=null and  contents.allowFeed !=null}?'toggle toggle-success allow-'+${contents.allowFeed}: 'toggle toggle-success allow-true'"
+                                    <div th:class="${articles!=null and  articles.allowFeed !=null}?'toggle toggle-success allow-'+${articles.allowFeed}: 'toggle toggle-success allow-true'"
                                          onclick="allow_feed(this);"></div>
                                 </div>
                             </div>
@@ -137,7 +137,7 @@
                         </form>
                     </div>
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <div th:replace="admin/footer :: footer-article"></div>
             </div>
         </div>
     </div>
