--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -4,8 +4,8 @@
 <body class="fixed-left">
 <div id="wrapper">
     <div th:replace="admin/header::header-body"></div>
-    <div class="content-page">
-        <div class="content">
+    <div class="article-page">
+        <div class="article">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
@@ -89,7 +89,7 @@
                                             <th:block th:unless="${comment.url}!=null and ${comment.url}!=''" th:text="${comment.author}"/>
                                             于<th:block th:text="${commons.fmtdate(comment.created,'MM月dd日HH:mm')}"/>：<a
                                                 th:href="${commons.site_url('/article/')}+${comment.cid}+'#comments'"
-                                                target="_blank" th:utext="${commons.article(comment.content)}"></a>
+                                                target="_blank" th:utext="${commons.article(comment.article)}"></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div th:replace="admin/footer :: footer-content"></div>
+                <div th:replace="admin/footer :: footer-article"></div>
             </div>
         </div>
     </div>
