--- a/src/main/resources/templates/themes/default/index.html
+++ b/src/main/resources/templates/themes/default/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="themes/default/header::header(null,null)"></div>
 <body>
-<div class="main-content index-page clearfix">
+<div class="main-article index-page clearfix">
     <div class="post-lists">
         <div class="post-lists-body">
             <div class="post-list-item" th:each="article: ${articles.list}">
