--- a/src/main/resources/templates/admin/attach.html
+++ b/src/main/resources/templates/admin/attach.html
@@ -43,8 +43,8 @@
 <body class="fixed-left">
 <div id="wrapper">
     <div th:replace="admin/header::header-body"></div>
-    <div class="article-page">
-        <div class="article">
+    <div class="content-page">
+        <div class="content">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
@@ -52,7 +52,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12 portlets">
-                            <!-- Your awesome article goes here -->
+                            <!-- Your awesome content goes here -->
                             <div class="m-b-30">
                                 <form action="#" class="dropzone" id="dropzone">
                                     <div class="fallback">
@@ -105,7 +105,7 @@
                         </th:block>
                     </div>
                 </div>
-                <div th:replace="admin/footer :: footer-article"></div>
+                <div th:replace="admin/footer :: footer-content"></div>
             </div>
         </div>
     </div>
