--- a/src/main/resources/templates/themes/default/page-category.html
+++ b/src/main/resources/templates/themes/default/page-category.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="themes/default/header::header(${keyword},null)"></div>
 <body>
-<div class="main-article common-page clearfix">
+<div class="main-content common-page clearfix">
     <div class="categorys-item">
         <div class="common-title">
             <th:block th:text="${type}"/> : <th:block th:text="${keyword}"/>
