--- a/src/main/resources/templates/admin/footer.html
+++ b/src/main/resources/templates/admin/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<div th:fragment="footer-article">
+<div th:fragment="footer-content">
     <footer class="footer text-right">
         2017 © <a th:href="@{https://github.com/ZHENFENG13/My-Blog}" target="_blank">My Blog</a><div class=""></div>
     </footer>
