--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -3,9 +3,9 @@
 <head th:fragment="headerFragment(title,active)">
     <meta charset="utf-8"/>
     <title><th:block th:text="${title!=null?title:'博客后台'}+'- My Blog'"></th:block></title>
-    <meta name="viewport" article="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta article="Coderthemes" name="author"/>
-    <meta http-equiv="X-UA-Compatible" article="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta content="Coderthemes" name="author"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <link rel="shortcut icon" th:href="@{/admin/images/favicon.png}"/>
     <link th:href="@{//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
