--- a/src/main/resources/templates/admin/page_edit.html
+++ b/src/main/resources/templates/admin/page_edit.html
@@ -6,16 +6,16 @@
 <body class="fixed-left">
 <div id="wrapper">
     <div th:replace="admin/header::header-body"></div>
-    <div class="article-page">
-        <div class="article">
+    <div class="content-page">
+        <div class="content">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
                         <h4 class="page-title">
-                            <th:block th:if="${null != articles}">
+                            <th:block th:if="${null != contents}">
                                 编辑页面
                             </th:block>
-                            <th:block th:unless="${null != articles}">
+                            <th:block th:unless="${null != contents}">
                                 发布新页面
                             </th:block>
                         </h4>
@@ -23,22 +23,22 @@
                     <div class="col-md-12">
                         <form id="articleForm" role="form" novalidate="novalidate">
                             <input type="hidden" name="categories" id="categories"/>
-                            <input type="hidden" name="cid" th:value="${articles!=null and articles.cid!=null}?${articles.cid}: ''" id="cid"/>
-                            <input type="hidden" name="status" th:value="${articles!=null and articles.status !=null}?${articles.status}: 'publish'" id="status"/>
-                            <input type="hidden" name="article" id="article-editor"/>
+                            <input type="hidden" name="cid" th:value="${contents!=null and contents.cid!=null}?${contents.cid}: ''" id="cid"/>
+                            <input type="hidden" name="status" th:value="${contents!=null and contents.status !=null}?${contents.status}: 'publish'" id="status"/>
+                            <input type="hidden" name="content" id="content-editor"/>
 
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="请输入页面标题" name="title" required=""
-                                       aria-required="true"  th:value="${articles!=null and articles.title!=null }?${articles.title}: ''"/>
+                                       aria-required="true"  th:value="${contents!=null and contents.title!=null }?${contents.title}: ''"/>
                             </div>
 
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="请输入页面访问名" name="slug" required=""
-                                       aria-required="true" th:value="${articles!=null and articles.slug !=null}?${articles.slug}: ''"/>
+                                       aria-required="true" th:value="${contents!=null and contents.slug !=null}?${contents.slug}: ''"/>
                             </div>
 
                             <div class="form-group">
-                                <textarea style="height: 450px" autocomplete="off" id="text" name="text" class="markdown-textarea" th:utext="${articles!=null and articles.article !=null}?${articles.article}: ''"></textarea>
+                                <textarea style="height: 450px" autocomplete="off" id="text" name="text" class="markdown-textarea" th:utext="${contents!=null and contents.content !=null}?${contents.content}: ''"></textarea>
                             </div>
 
                             <div class="text-right">
@@ -49,7 +49,7 @@
                     </div>
 
                 </div>
-                <div th:replace="admin/footer :: footer-article"></div>
+                <div th:replace="admin/footer :: footer-content"></div>
             </div>
         </div>
     </div>
@@ -70,7 +70,7 @@
     // validate the comment form when it is submitted
     $('#articleForm').validate({
         submitHandler: function (form) {
-            $('#article-editor').val($('#text').val());
+            $('#content-editor').val($('#text').val());
             $("#articleForm #categories").val($('#multiple-sel').val());
             var params = $("#articleForm").serialize();
             var url = $('#articleForm #cid').val() != '' ? '/admin/page/modify' : '/admin/page/publish';
