--- a/src/main/resources/templates/admin/profile.html
+++ b/src/main/resources/templates/admin/profile.html
@@ -4,8 +4,8 @@
 <body>
 <div id="wrapper">
     <div th:replace="admin/header::header-body"></div>
-    <div class="article-page">
-        <div class="article">
+    <div class="content-page">
+        <div class="content">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
@@ -87,7 +87,7 @@
                     </div>
 
                 </div>
-                <div th:replace="admin/footer :: footer-article"></div>
+                <div th:replace="admin/footer :: footer-content"></div>
             </div>
         </div>
     </div>
