--- a/src/main/resources/templates/comm/error_404.html
+++ b/src/main/resources/templates/comm/error_404.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <title>404（找不到页面）- My Blog</title>
-    <meta name="viewport" article="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta http-equiv="X-UA-Compatible" article="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <link rel="shortcut icon" th:href="@{/admin/images/favicon.png}"/>
     <link th:href="@{//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{/admin/css/style.min.css}" rel="stylesheet" type="text/css"/>
@@ -19,7 +19,7 @@
 <body>
 
 <div class="wrapper-page">
-    <div class="ex-page-article text-center">
+    <div class="ex-page-content text-center">
         <h1>404!</h1>
         <h2>很抱歉，没有找到这个页面！</h2>
          <br></br>
