--- a/src/main/resources/templates/admin/page_list.html
+++ b/src/main/resources/templates/admin/page_list.html
@@ -26,22 +26,22 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <th:block th:each="post : ${articles.list}">
-                                <tr th:cid="${post.cid}">
-                                    <td th:text="${post.title}"></td>
-                                    <td th:text="${post.slug}"></td>
-                                    <td th:text="${commons.fmtdate(post.created, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                            <th:block th:each="article : ${articles.list}">
+                                <tr th:cid="${article.id}">
+                                    <td th:text="${article.title}"></td>
+                                    <td th:text="${article.thumbnail}"></td>
+                                    <td th:text="${commons.fmtdate(article.created, 'yyyy-MM-dd HH:mm:ss')}"></td>
                                     <td>
-                                        <th:block th:if="${post.status == 'publish'}" th:text="已发布"/>
-                                        <th:block th:if="${post.status == 'draft'}" th:text="草稿"/>
+                                        <th:block th:if="${article.status == 'publish'}" th:text="已发布"/>
+                                        <th:block th:if="${article.status == 'draft'}" th:text="草稿"/>
                                     </td>
                                     <td>
-                                        <a th:href="@{'/admin/page/'+${post.cid}}" class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
+                                        <a th:href="@{'/admin/page/'+${article.id}}" class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
                                                 class="fa fa-edit"></i> <span>编辑</span></a>
-                                        <a href="javascript:void(0)" th:onclick="'delPost('+${post.cid}+');'"
+                                        <a href="javascript:void(0)" th:onclick="'delPost('+${article.id}+');'"
                                            class="btn btn-danger btn-sm waves-effect waves-light m-b-5"><i
                                                 class="fa fa-trash-o"></i> <span>删除</span></a>
-                                        <a class="btn btn-warning btn-sm waves-effect waves-light m-b-5" th:href="@{'/'+${post.slug}}"
+                                        <a class="btn btn-warning btn-sm waves-effect waves-light m-b-5" th:href="@{'/'+${article.thumbnail}}"
                                            target="_blank"><i
                                                 class="fa fa-rocket"></i> <span>预览</span></a>
                                     </td>
