--- a/src/main/resources/templates/admin/article_list.html
+++ b/src/main/resources/templates/admin/article_list.html
@@ -24,30 +24,30 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <th:block th:each="post : ${articles.list}">
-                                <tr th:cid="${post.cid}">
+                            <th:block th:each="article : ${articles.list}">
+                                <tr th:cid="${article.id}">
                                     <td>
-                                        <a th:href="@{'/admin/article/'+${post.cid}}" th:text="${post.title}"></a>
+                                        <a th:href="@{'/admin/article/'+${article.id}}" th:text="${article.title}"></a>
                                     </td>
-                                    <td><th:block th:text="${commons.fmtdate(post.created, 'yyyy-MM-dd HH:mm:ss')}"/></td>
-                                    <td><th:block th:text="${post.hits}"/></td>
-                                    <td><th:block th:text="${post.categories}"/></td>
+                                    <td><th:block th:text="${commons.fmtdate(article.created, 'yyyy-MM-dd HH:mm:ss')}"/></td>
+                                    <td><th:block th:text="${article.hits}"/></td>
+                                    <td><th:block th:text="${article.categories}"/></td>
                                     <td>
-                                        <th:block th:if="${post.status == 'publish'}">
+                                        <th:block th:if="${article.status == 'publish'}">
                                             <span class="label label-success">已发布</span>
                                         </th:block>
-                                       <th:block th:if="${post.status == 'draft'}">
+                                       <th:block th:if="${article.status == 'draft'}">
                                            <span class="label label-default">草稿</span>
                                        </th:block>
                                     </td>
                                     <td>
-                                        <a th:href="@{'/admin/article/'+${post.cid}}"
+                                        <a th:href="@{'/admin/article/'+${article.id}}"
                                            class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
                                                 class="fa fa-edit"></i> <span>编辑</span></a>
-                                        <a href="javascript:void(0)" th:onclick="'delPost('+${post.cid}+');'"
+                                        <a href="javascript:void(0)" th:onclick="'delPost('+${article.id}+');'"
                                            class="btn btn-danger btn-sm waves-effect waves-light m-b-5"><i
                                                 class="fa fa-trash-o"></i> <span>删除</span></a>
-                                        <a class="btn btn-warning btn-sm waves-effect waves-light m-b-5" th:href="${commons.permalink(post)}+'/preview'"
+                                        <a class="btn btn-warning btn-sm waves-effect waves-light m-b-5" th:href="${commons.permalink(article)}+'/preview'"
                                            target="_blank"><i
                                                 class="fa fa-rocket"></i> <span>预览</span></a>
                                     </td>
