--- a/src/main/resources/templates/admin/footer.html
+++ b/src/main/resources/templates/admin/footer.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="footer-content">
     <footer class="footer text-right">
-        2017 © <a th:href="@{https://github.com/ZHENFENG13/My-Blog}" target="_blank">My Blog</a><div class=""></div>
+        2018 © <a th:href="@{https://github.com/lqy1994/lingxi-blog/}" target="_blank">灵犀博文平台</a><div class=""></div>
     </footer>
 </div>
 <body th:fragment="footer">
