--- a/src/main/resources/templates/admin/page_edit.html
+++ b/src/main/resources/templates/admin/page_edit.html
@@ -23,7 +23,7 @@
                     <div class="col-md-12">
                         <form id="articleForm" role="form" novalidate="novalidate">
                             <input type="hidden" name="categories" id="categories"/>
-                            <input type="hidden" name="cid" th:value="${contents!=null and contents.cid!=null}?${contents.cid}: ''" id="cid"/>
+                            <input type="hidden" name="cid" th:value="${contents!=null and contents.id!=null}?${contents.id}: ''" id="cid"/>
                             <input type="hidden" name="status" th:value="${contents!=null and contents.status !=null}?${contents.status}: 'publish'" id="status"/>
                             <input type="hidden" name="content" id="content-editor"/>
 
@@ -34,7 +34,7 @@
 
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="请输入页面访问名" name="slug" required=""
-                                       aria-required="true" th:value="${contents!=null and contents.slug !=null}?${contents.slug}: ''"/>
+                                       aria-required="true" th:value="${contents!=null and contents.thumbnail !=null}?${contents.thumbnail}: ''"/>
                             </div>
 
                             <div class="form-group">
