--- a/src/main/resources/templates/themes/default/index.html
+++ b/src/main/resources/templates/themes/default/index.html
@@ -18,7 +18,7 @@
                                                    th:text="${article.title}"></a>
                         </div>
                         <div class="item-meta clearfix">
-                            <div th:class="'item-meta-ico '+ ${commons.show_icon(article.cid)}"
+                            <div th:class="'item-meta-ico '+ ${commons.show_icon(article.id)}"
                                  th:style="'background: url('+@{/user/img/bg-ico.png}+');no-repeat;background-size: 40px auto;' "></div>
                             <div class="item-meta-cat" th:utext="${commons.show_categories(article.categories)}">
                             </div>
