--- a/src/main/resources/templates/comm/tale_comment.html
+++ b/src/main/resources/templates/comm/tale_comment.html
@@ -23,7 +23,7 @@
             subComment: function () {
                 $.ajax({
                     type: 'post',
-                    url: '/comment',
+                    url: '/lingxi/comment',
                     data: $('#comment-form').serialize(),
                     async: false,
                     dataType: 'json',
