--- a/src/main/resources/templates/themes/default/comments.html
+++ b/src/main/resources/templates/themes/default/comments.html
@@ -9,7 +9,7 @@
                 <th:block th:if="${session.login_user}">
                     Hi，<a th:href="${session.login_user.homeUrl}" data-no-instant=""
                           th:text="${session.login_user.username}"></a>
-                    如果你想 <a href="/logout" title="注销" data-no-instant="">注销</a> ?
+                    如果你想 <a href="/lingxi/logout" title="注销" data-no-instant="">注销</a> ?
                 </th:block>
             </span>
                 <form method="post" id="comment-form" class="comment-form" role="form"
