--- a/src/main/resources/templates/themes/default/footer.html
+++ b/src/main/resources/templates/themes/default/footer.html
@@ -187,7 +187,7 @@
         if (key == 13) {
             var q = $(this).val();
             if (q && q != '') {
-                window.location.href = '/search/' + q;
+                window.location.href = '/lingxi/search/' + q;
             }
         }
     });
