--- a/src/main/resources/templates/themes/default/header.html
+++ b/src/main/resources/templates/themes/default/header.html
@@ -33,9 +33,9 @@
             <img th:src="@{/user/img/logo.png}" alt="首页"/>
         </a>
         <div class="navbar-menu">
-            <a th:href="${commons.site_url('/archives')}">归档</a>
-            <a th:href="${commons.site_url('/links')}">友链</a>
-            <a th:href="${commons.site_url('/about')}">关于</a>
+            <a th:href="${commons.site_url('/lingxi/archives')}">归档</a>
+            <a th:href="${commons.site_url('/lingxi/links')}">友链</a>
+            <a th:href="${commons.site_url('/lingxi/about')}">关于</a>
         </div>
         <div class="navbar-search" onclick="">
             <span class="icon-search"></span>
@@ -49,9 +49,9 @@
         <div class="navbar-mobile-menu" onclick="">
             <span class="icon-menu cross"><span class="middle"></span></span>
             <ul>
-                <li><a th:href="${commons.site_url('/archives')}">归档</a></li>
-                <li><a th:href="${commons.site_url('/links')}">友链</a></li>
-                <li><a th:href="${commons.site_url('/about')}">关于</a></li>
+                <li><a th:href="${commons.site_url('/lingxi/archives')}">归档</a></li>
+                <li><a th:href="${commons.site_url('/lingxi/links')}">友链</a></li>
+                <li><a th:href="${commons.site_url('/lingxi/about')}">关于</a></li>
             </ul>
         </div>
     </div>
