--- a/src/main/resources/templates/themes/default/header.html
+++ b/src/main/resources/templates/themes/default/header.html
@@ -29,13 +29,13 @@
 <![endif]-->
 <header id="header" class="header bg-white">
     <div class="navbar-container">
-        <a th:href="${commons.site_url()}" class="navbar-logo">
+        <a href="/lingxi/" class="navbar-logo">
             <img th:src="@{/user/img/logo.png}" alt="首页"/>
         </a>
         <div class="navbar-menu">
-            <a th:href="${commons.site_url('/lingxi/archives')}">归档</a>
-            <a th:href="${commons.site_url('/lingxi/links')}">友链</a>
-            <a th:href="${commons.site_url('/lingxi/about')}">关于</a>
+            <a href="/lingxi/archives">文章</a>
+            <a href="/lingxi/browser">浏览</a>
+            <a href="/lingxi/links">分类</a>
         </div>
         <div class="navbar-search" onclick="">
             <span class="icon-search"></span>
@@ -49,9 +49,9 @@
         <div class="navbar-mobile-menu" onclick="">
             <span class="icon-menu cross"><span class="middle"></span></span>
             <ul>
-                <li><a th:href="${commons.site_url('/lingxi/archives')}">归档</a></li>
-                <li><a th:href="${commons.site_url('/lingxi/links')}">友链</a></li>
-                <li><a th:href="${commons.site_url('/lingxi/about')}">关于</a></li>
+                <li><a href="/lingxi/archives">归档</a></li>
+                <li><a href="/lingxi/links">友链</a></li>
+                <li><a href="/lingxi/about">关于</a></li>
             </ul>
         </div>
     </div>
